--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,23 +1,16 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python package
+name: Build, Lint, Test, and Publish
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-
+        python-version: ["3.12"]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -38,3 +31,20 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --capture=sys
+  publish:
+    name: Publish lignum to PyPI
+    needs:
+    - build
+    runs-on: ubuntu-latest
+    environment: pypi
+    url: https://pypi.org/p/lignum
+    permissions:
+      id_token: write
+    steps:
+    - name: Download all the dists
+      uses: actions/download-artifact@v3
+      with:
+        name: python-package-distriubutions
+        path: dist/
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
