--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,10 +36,11 @@ jobs:
     needs:
     - build
     runs-on: ubuntu-latest
-    environment: pypi
-    url: https://pypi.org/p/lignum
+    environment: 
+      name: pypi
+      url: https://pypi.org/p/lignum
     permissions:
-      id_token: write
+      id-token: write
     steps:
     - name: Download all the dists
       uses: actions/download-artifact@v3
