--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,7 +48,7 @@ jobs:
     permissions:
       id-token: write
     steps:
-    - name: Download Artifactos
+    - name: Download Artifacts
       uses: actions/download-artifact@v3
       with:
         name: python-package-distributions
@@ -64,31 +64,31 @@ jobs:
     permissions:
       contents: write
       id-token: write
-      steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: python-package-distributions
-          path: dist/
-      - name: Sign Distribution
-        uses: sigstore/gh-action-sigstore-python@v2.1.1
-        with:
-          inputs: >-
-            ./dist/*.tar.gz
-            ./dist/*.whl
-      - name: Create Release
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: >-
-          gh release create
-          '${{ github.ref_name }}'
-          --repo '${{ github.repository }}'
-          --notes ""
-      - name: Upload Release
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: >-
-          gh release upload
-          '${{ github.ref_name }}' dist/**
-          --repo '${{ github.repository }}'
-        
+    steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: python-package-distributions
+        path: dist/
+    - name: Sign Distribution
+      uses: sigstore/gh-action-sigstore-python@v2.1.1
+      with:
+        inputs: |
+          ./dist/*.tar.gz
+          ./dist/*.whl
+    - name: Create Release
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      run: |
+        gh release create
+        '${{ github.ref_name }}'
+        --repo '${{ github.repository }}'
+        --notes ""
+    - name: Upload Release
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      run: |
+        gh release upload
+        '${{ github.ref_name }}' dist/**
+        --repo '${{ github.repository }}'
+      
