--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,8 +17,7 @@ jobs:
         python-version: "3.x"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install requirements_dev.txt
+        python -m pip install .[test]
         python -m pip install build --user
     - name: Lint
       run: |
